# chaosz_cli

./: .gitignore  Chaosz_CLI_Todo.md  LICENSE  README.md  pyproject.toml  quality_fixes_todo.md  run.sh  setup.sh
.github/workflows/: tests.yml
aichat/: main.py
chaosz/: config.py  main.py  mcp_manager.py  ollama_utils.py  plan_driver.py  providers.py  session.py  shell.py  skills.py  state.py  stream_adapters.py  tools.py
chaosz/ui/: app.py  app_ai_turn.py  app_compaction.py  app_compose_turn.py  app_input_modes.py  app_investigation_turn.py  app_mcp_setup.py  app_ollama_setup.py  app_rendering.py  app_runtime.py  commands.py  plasma.py  routing.py  stream_utils.py  themes.py  widgets.py
chaosz/ui/theme_files/: amber.theme  default.theme  green.theme  mono.theme
skills/: code-review.md  coder.md  mcp-builder.md
tests/: test_config.py  test_plan_driver.py  test_provider_adapter_policy.py  test_session_restore.py  test_shell.py  test_stream_adapters.py  test_tools.py
