[project]
name = "chaosz-cli"
version = "0.9.1"
description = "A Python CLI AI API wrapper"
authors = [{name = "Chaosz Software"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.60.0",
    "ddgs>=9.12.1",
    "ollama>=0.4.0",
    "google-genai>=1.10.0",
    "mcp>=1.9.0,<2.0.0",
]

[project.scripts]
chaosz = "chaosz.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chaosz"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
]
